--- a/web/package.json
+++ b/web/package.json
@@ -13,9 +13,13 @@
     ]
   },
   "dependencies": {
+    "@chakra-ui/react": "^1",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@redwoodjs/forms": "^3.5.0",
     "@redwoodjs/router": "^3.5.0",
     "@redwoodjs/web": "^3.5.0",
+    "framer-motion": "^6",
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
