--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "@chakra-ui/react": "^2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@redwoodjs/auth": "3.5.0",
     "@redwoodjs/forms": "^3.5.0",
     "@redwoodjs/router": "^3.5.0",
     "@redwoodjs/web": "^3.5.0",
