--- a/web/package.json
+++ b/web/package.json
@@ -13,9 +13,14 @@
     ]
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.14",
+    "@chakra-ui/react": "^1",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@redwoodjs/forms": "3.7.1",
     "@redwoodjs/router": "3.7.1",
     "@redwoodjs/web": "3.7.1",
+    "framer-motion": "^6",
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
