--- a/.env.defaults
+++ b/.env.defaults
@@ -4,7 +4,10 @@
 # into version control.
 
 # schema.prisma defaults
-DATABASE_URL=file:./dev.db
+DATABASE_URL=postgresql://postgres:postgres@localhost:54322/postgres
+
+# supabase local defaults
+SUPABASE_URL=http://localhost:54321
 
 # location of the test database for api service scenarios (defaults to ./.redwood/test.db if not set)
 # TEST_DATABASE_URL=file:./.redwood/test.db
