--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 # DATABASE_URL=file:./dev.db
+# SUPABASE_URL=http://localhost:54321
+# SUPABASE_KEY=lksdjglsadkfjgslakgjasdlkgjasdlkgsdlfkjlskjgsdglkj
+# SUPABASE_JWT_SECRET=super-secret-jwt-token-with-at-least-32-characters-long
 # TEST_DATABASE_URL=file:./.redwood/test.db
 # PRISMA_HIDE_UPDATE_MESSAGE=true
 # LOG_LEVEL=trace
