--- a/web/package.json
+++ b/web/package.json
@@ -17,9 +17,11 @@
     "@chakra-ui/react": "^1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@redwoodjs/auth": "3.8.0",
     "@redwoodjs/forms": "^3.8.0",
     "@redwoodjs/router": "^3.8.0",
     "@redwoodjs/web": "^3.8.0",
+    "@supabase/supabase-js": "1.35.7",
     "framer-motion": "^6",
     "prop-types": "15.8.1",
     "react": "17.0.2",
