Expose supabase url and key to web

--- a/redwood.toml
+++ b/redwood.toml
@@ -9,7 +9,7 @@
   title = "Lifepacks"
   port = 8910
   apiUrl = "/api"
-  includeEnvironmentVariables = [] # any ENV vars that should be available to the web side, see https://redwoodjs.com/docs/environment-variables#web
+  includeEnvironmentVariables = ["SUPABASE_URL", "SUPABASE_KEY"] # any ENV vars that should be available to the web side, see https://redwoodjs.com/docs/environment-variables#web
 [api]
   port = 8911
 [browser]
