--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.15",
-    "@chakra-ui/react": "^1",
+    "@chakra-ui/react": "2.4.5",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@redwoodjs/auth": "3.8.0",
@@ -22,9 +22,9 @@
     "@redwoodjs/router": "^3.8.0",
     "@redwoodjs/web": "^3.8.0",
     "@supabase/supabase-js": "1.35.7",
-    "framer-motion": "^6",
+    "framer-motion": "8.0.2",
     "prop-types": "15.8.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
