--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     ]
   },
   "devDependencies": {
-    "@redwoodjs/core": "^3.8.0"
+    "@redwoodjs/auth-supabase-setup": "4.0.1",
+    "@redwoodjs/core": "^4.0.1"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
     "root": true
   },
   "engines": {
-    "node": ">=14.19 <=16.x",
+    "node": ">=16.x <=18.x",
     "yarn": ">=1.15"
   },
   "prisma": {
