--- a/web/package.json
+++ b/web/package.json
@@ -17,11 +17,12 @@
     "@chakra-ui/react": "2.4.9",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@redwoodjs/auth": "3.8.0",
-    "@redwoodjs/forms": "^3.8.0",
-    "@redwoodjs/router": "^3.8.0",
-    "@redwoodjs/web": "^3.8.0",
-    "@supabase/supabase-js": "1.35.7",
+    "@redwoodjs/auth": "4.0.1",
+    "@redwoodjs/auth-supabase-web": "4.0.1",
+    "@redwoodjs/forms": "^4.0.1",
+    "@redwoodjs/router": "^4.0.1",
+    "@redwoodjs/web": "^4.0.1",
+    "@supabase/supabase-js": "^1",
     "framer-motion": "8.5.5",
     "prop-types": "15.8.1",
     "react": "18.2.0",
