--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,8 @@ on:
 env:
   DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
   TEST_DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
+  SUPABASE_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1zbXlxZWtsc2tpcmx0Ymptbm1qIiwicm9sZSI6ImFub24iLCJpYXQiOjE2NzA0ODAxNzQsImV4cCI6MTk4NjA1NjE3NH0.lU5KR_VPV9RQRQ_d4LCmH66GDnu_di8vDJHnQMIxf_c
+  SUPABASE_URL: https://msmyqeklskirltbjmnmj.supabase.co
 
 jobs:
   build:
@@ -17,7 +19,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     services:
