--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     ]
   },
   "devDependencies": {
-    "@redwoodjs/auth-supabase-setup": "4.0.1",
-    "@redwoodjs/core": "^4.0.1"
+    "@redwoodjs/auth-supabase-setup": "4.1.0",
+    "@redwoodjs/core": "4.1.0"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
