Fetch pack data from database

--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@redwoodjs/api": "4.1.2",
     "@redwoodjs/auth-supabase-api": "4.1.2",
-    "@redwoodjs/graphql-server": "4.1.2"
+    "@redwoodjs/graphql-server": "4.1.2",
+    "jsonwebtoken": "^9.0.0"
   }
 }
