--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "@redwoodjs/router": "4.1.2",
     "@redwoodjs/web": "4.1.2",
     "@supabase/supabase-js": "^1",
+    "date-fns": "^2.29.3",
     "framer-motion": "9.0.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
