--- a/web/package.json
+++ b/web/package.json
@@ -17,15 +17,17 @@
     "@chakra-ui/react": "2.4.9",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@redwoodjs/auth": "4.1.0",
-    "@redwoodjs/auth-supabase-web": "4.1.0",
-    "@redwoodjs/forms": "4.1.0",
-    "@redwoodjs/router": "4.1.0",
-    "@redwoodjs/web": "4.1.0",
+    "@redwoodjs/auth": "4.1.2",
+    "@redwoodjs/auth-supabase-web": "4.1.2",
+    "@redwoodjs/forms": "4.1.2",
+    "@redwoodjs/router": "4.1.2",
+    "@redwoodjs/web": "4.1.2",
     "@supabase/supabase-js": "^1",
+    "date-fns": "^2.29.3",
     "framer-motion": "9.0.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1"
   }
 }
