Fix type errors and add lint and type check to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,10 @@ jobs:
       - run: yarn install
       # build the redwood app
       - run: yarn rw build
+      # run the type checker
+      - run: yarn rw type-check
+      # run the linter
+      - run: yarn rw lint
       # run the api tests
       - run: yarn rw test api --no-watch
       # run the web tests
