Edit existing packs

--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
     "@redwoodjs/api": "4.1.4",
     "@redwoodjs/auth-supabase-api": "4.1.4",
     "@redwoodjs/graphql-server": "4.1.4",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "slugify": "^1.6.5"
   }
 }
