--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "prisma": {
     "seed": "yarn rw exec seed"
   },
-  "packageManager": "yarn@3.3.0"
+  "packageManager": "yarn@3.3.0",
+  "dependencies": {
+    "slug": "^8.2.2"
+  }
 }
