--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "@redwoodjs/router": "4.2.0",
     "@redwoodjs/web": "4.2.0",
     "@supabase/supabase-js": "^1",
+    "compressorjs": "^1.2.1",
     "date-fns": "^2.29.3",
     "framer-motion": "10.0.1",
     "prop-types": "15.8.1",
