--- a/api/package.json
+++ b/api/package.json
@@ -3,10 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@redwoodjs/api": "4.2.0",
-    "@redwoodjs/auth-supabase-api": "4.2.0",
-    "@redwoodjs/graphql-server": "4.2.0",
-    "jsonwebtoken": "^9.0.0",
-    "slug": "^8.2.2"
+    "@redwoodjs/api": "4.2.2",
+    "@redwoodjs/auth-supabase-api": "4.2.2",
+    "@redwoodjs/graphql-server": "4.2.2",
+    "jsonwebtoken": "^9.0.0"
   }
 }
