--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     ]
   },
   "devDependencies": {
-    "@redwoodjs/auth-supabase-setup": "4.2.0",
-    "@redwoodjs/core": "4.2.0"
+    "@redwoodjs/auth-supabase-setup": "4.2.2",
+    "@redwoodjs/core": "4.2.2"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
@@ -22,5 +22,8 @@
   "prisma": {
     "seed": "yarn rw exec seed"
   },
-  "packageManager": "yarn@3.3.0"
+  "packageManager": "yarn@3.3.0",
+  "dependencies": {
+    "slug": "^8.2.2"
+  }
 }
