--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,8 @@
     "@redwoodjs/forms": "4.3.1",
     "@redwoodjs/router": "4.3.1",
     "@redwoodjs/web": "4.3.1",
+    "@sentry/react": "^7.42.0",
+    "@sentry/tracing": "^7.42.0",
     "@supabase/supabase-js": "^1",
     "compressorjs": "^1.2.1",
     "date-fns": "^2.29.3",
