Attempt to add source maps to sentry

--- a/redwood.toml
+++ b/redwood.toml
@@ -9,6 +9,7 @@
   title = "Lifepacks"
   port = 8910
   apiUrl = "/api"
+  sourceMap = true
   includeEnvironmentVariables = [ # any ENV vars that should be available to the web side, see https://redwoodjs.com/docs/environment-variables#web
     "SUPABASE_URL",
     "SUPABASE_KEY",
