--- a/web/package.json
+++ b/web/package.json
@@ -33,5 +33,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@sentry/webpack-plugin": "^1.20.0"
   }
 }
