Expose DATABASE_DIRECT_URL in github action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ on:
 
 env:
   DATABASE_URL: ${{ vars.DATABASE_URL }}
+  DATABASE_DIRECT_URL: ${{ vars.DATABASE_DIRECT_URL }}
   TEST_DATABASE_URL: ${{ vars.TEST_DATABASE_URL }}
   SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
   SUPABASE_URL: ${{ vars.SUPABASE_URL }}
