--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
     "@redwoodjs/api": "4.4.3",
     "@redwoodjs/auth-supabase-api": "4.4.3",
     "@redwoodjs/graphql-server": "4.4.3",
+    "@sendinblue/client": "^3.3.1",
     "@sentry/node": "^7.46.0",
     "jsonwebtoken": "^9.0.0"
   }
