--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "slug": "^8.2.2"
   },
   "devDependencies": {
-    "@redwoodjs/auth-supabase-setup": "4.5.0",
-    "@redwoodjs/core": "4.5.0"
+    "@redwoodjs/auth-supabase-setup": "5.0.1",
+    "@redwoodjs/core": "5.0.1"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
     "root": true
   },
   "engines": {
-    "node": ">=16.x <=18.x",
+    "node": ">=18.16",
     "yarn": ">=1.15"
   },
   "prisma": {
