--- a/web/package.json
+++ b/web/package.json
@@ -13,17 +13,17 @@
     ]
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.18",
-    "@chakra-ui/react": "2.5.5",
+    "@chakra-ui/icons": "2.0.19",
+    "@chakra-ui/react": "2.6.0",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@redwoodjs/auth": "4.5.0",
-    "@redwoodjs/auth-supabase-web": "4.5.0",
-    "@redwoodjs/forms": "4.5.0",
-    "@redwoodjs/router": "4.5.0",
-    "@redwoodjs/web": "4.5.0",
+    "@redwoodjs/auth": "5.0.1",
+    "@redwoodjs/auth-supabase-web": "5.0.1",
+    "@redwoodjs/forms": "5.0.1",
+    "@redwoodjs/router": "5.0.1",
+    "@redwoodjs/web": "5.0.1",
     "@sentry/react": "^7.49.0",
-    "@supabase/supabase-js": "^1",
+    "@supabase/supabase-js": "2.21.0",
     "compressorjs": "^1.2.1",
     "date-fns": "^2.29.3",
     "framer-motion": "10.12.4",
