--- a/web/package.json
+++ b/web/package.json
@@ -15,13 +15,13 @@
   "dependencies": {
     "@chakra-ui/icons": "2.0.19",
     "@chakra-ui/react": "2.6.0",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "@redwoodjs/auth": "5.0.1",
-    "@redwoodjs/auth-supabase-web": "5.0.1",
-    "@redwoodjs/forms": "5.0.1",
-    "@redwoodjs/router": "5.0.1",
-    "@redwoodjs/web": "5.0.1",
+    "@emotion/react": "11.10.8",
+    "@emotion/styled": "11.10.8",
+    "@redwoodjs/auth": "5.0.2",
+    "@redwoodjs/auth-supabase-web": "5.0.2",
+    "@redwoodjs/forms": "5.0.2",
+    "@redwoodjs/router": "5.0.2",
+    "@redwoodjs/web": "5.0.2",
     "@sentry/react": "^7.49.0",
     "@supabase/supabase-js": "2.21.0",
     "compressorjs": "^1.2.1",
