--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,10 @@ jobs:
           node-version: ${{ matrix.node-version }}
       # install all the dependencies
       - run: yarn install
+      # run migrations on the actual database
+      - run: yarn rw prisma migrate deploy
+      # run seed script in the actual db
+      - run: yarn rw prisma db seed
       # build the redwood app
       - run: yarn rw build
       # run the linter
