Attempt to prerender the explore page (#143)
* Attempt to prerender the explore page

* Add CI steps

* Switch order or prisma steps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,8 +53,12 @@ jobs:
           node-version: ${{ matrix.node-version }}
       # install all the dependencies
       - run: yarn install
+      # run migrations on the actual database
+      - run: yarn rw prisma migrate deploy
       # build the redwood app
       - run: yarn rw build
+      # run seed script in the actual db
+      - run: yarn rw prisma db seed
       # run the linter
       - run: yarn rw lint
       # run the api tests
