--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,7 @@
     "@redwoodjs/auth-supabase-api": "5.2.4",
     "@redwoodjs/graphql-server": "5.2.4",
     "@sendinblue/client": "^3.3.1",
-    "@sentry/node": "^7.53.1",
+    "@sentry/node": "7.54.0",
     "@sentry/profiling-node": "^0.3.0",
     "jsonwebtoken": "^9.0.0"
   }
