--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "2.0.19",
-    "@chakra-ui/react": "2.6.1",
+    "@chakra-ui/react": "2.7.0",
     "@emotion/react": "11.11.0",
     "@emotion/styled": "11.11.0",
     "@redwoodjs/auth": "5.2.4",
@@ -22,7 +22,7 @@
     "@redwoodjs/forms": "5.2.4",
     "@redwoodjs/router": "5.2.4",
     "@redwoodjs/web": "5.2.4",
-    "@sentry/react": "^7.53.1",
+    "@sentry/react": "7.54.0",
     "@supabase/supabase-js": "2.24.0",
     "compressorjs": "^1.2.1",
     "date-fns": "^2.30.0",
