--- a/api/package.json
+++ b/api/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@envelop/sentry": "^5.1.1",
-    "@redwoodjs/api": "5.2.4",
-    "@redwoodjs/auth-supabase-api": "5.2.4",
-    "@redwoodjs/graphql-server": "5.2.4",
+    "@envelop/sentry": "6.0.0",
+    "@redwoodjs/api": "5.3.0",
+    "@redwoodjs/auth-supabase-api": "5.3.0",
+    "@redwoodjs/graphql-server": "5.3.0",
     "@sendinblue/client": "^3.3.1",
     "@sentry/node": "7.54.0",
     "@sentry/profiling-node": "^0.3.0",
+    "@sentry/webpack-plugin": "2.2.1",
     "jsonwebtoken": "^9.0.0"
   }
 }
