--- a/web/package.json
+++ b/web/package.json
@@ -17,11 +17,11 @@
     "@chakra-ui/react": "2.7.0",
     "@emotion/react": "11.11.0",
     "@emotion/styled": "11.11.0",
-    "@redwoodjs/auth": "5.2.4",
-    "@redwoodjs/auth-supabase-web": "5.2.4",
-    "@redwoodjs/forms": "5.2.4",
-    "@redwoodjs/router": "5.2.4",
-    "@redwoodjs/web": "5.2.4",
+    "@redwoodjs/auth": "5.3.0",
+    "@redwoodjs/auth-supabase-web": "5.3.0",
+    "@redwoodjs/forms": "5.3.0",
+    "@redwoodjs/router": "5.3.0",
+    "@redwoodjs/web": "5.3.0",
     "@sentry/react": "7.54.0",
     "@supabase/supabase-js": "2.24.0",
     "compressorjs": "^1.2.1",
@@ -34,6 +34,6 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@sentry/webpack-plugin": "^1.20.1"
+    "@sentry/webpack-plugin": "2.2.1"
   }
 }
