Jmdesiderio/upgrade redwood (#189)
* Upgrade redwood to 5.4.0

* Untransform images on preview envs

* Use correct env

* Fix lint bug

* Fix type check error

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "slug": "^8.2.2"
   },
   "devDependencies": {
-    "@redwoodjs/auth-supabase-setup": "5.3.2",
-    "@redwoodjs/core": "5.3.2"
+    "@redwoodjs/auth-supabase-setup": "5.4.0",
+    "@redwoodjs/core": "5.4.0",
+    "@redwoodjs/eslint-plugin": "latest"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
