--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "slug": "^8.2.2"
   },
   "devDependencies": {
-    "@redwoodjs/auth-supabase-setup": "5.4.0",
-    "@redwoodjs/core": "5.4.0",
-    "@redwoodjs/eslint-plugin": "latest"
+    "@redwoodjs/auth-supabase-setup": "5.4.1",
+    "@redwoodjs/core": "5.4.1"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
