--- a/api/package.json
+++ b/api/package.json
@@ -9,8 +9,8 @@
     "@redwoodjs/graphql-server": "5.4.2",
     "@sendinblue/client": "^3.3.1",
     "@sentry/node": "7.57.0",
-    "@sentry/profiling-node": "^1.0.6",
+    "@sentry/profiling-node": "1.0.8",
     "@sentry/webpack-plugin": "2.4.0",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "9.0.1"
   }
 }
