--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
     "@sentry/node": "7.57.0",
     "@sentry/profiling-node": "1.0.8",
     "@sentry/webpack-plugin": "2.4.0",
-    "jsonwebtoken": "9.0.1"
+    "jsonwebtoken": "9.0.1",
+    "sanitize-html": "^2.11.0"
   }
 }
