--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "@chakra-ui/react": "2.7.1",
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
+    "@lexical/react": "^0.11.1",
     "@redwoodjs/auth": "5.4.2",
     "@redwoodjs/auth-supabase-web": "5.4.2",
     "@redwoodjs/forms": "5.4.2",
@@ -27,6 +28,7 @@
     "compressorjs": "^1.2.1",
     "date-fns": "^2.30.0",
     "framer-motion": "10.12.18",
+    "lexical": "^0.11.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
