--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,10 @@
     "@redwoodjs/web": "5.4.2",
     "@sentry/react": "7.57.0",
     "@supabase/supabase-js": "2.26.0",
+    "@tiptap/extension-underline": "^2.0.3",
+    "@tiptap/pm": "^2.0.3",
+    "@tiptap/react": "^2.0.3",
+    "@tiptap/starter-kit": "^2.0.3",
     "compressorjs": "^1.2.1",
     "date-fns": "^2.30.0",
     "framer-motion": "10.12.18",
