--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "@redwoodjs/web": "5.4.3",
     "@sentry/react": "7.57.0",
     "@supabase/supabase-js": "2.26.0",
+    "@vercel/analytics": "^1.0.1",
     "compressorjs": "^1.2.1",
     "date-fns": "^2.30.0",
     "framer-motion": "10.12.18",
