--- a/web/package.json
+++ b/web/package.json
@@ -32,6 +32,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-wrap-balancer": "^1.0.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
