--- a/web/package.json
+++ b/web/package.json
@@ -37,7 +37,6 @@
   },
   "devDependencies": {
     "@redwoodjs/vite": "6.0.2",
-    "@sentry/vite-plugin": "^2.5.0",
-    "@sentry/webpack-plugin": "2.4.0"
+    "@sentry/vite-plugin": "^2.5.0"
   }
 }
