--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@redwoodjs/auth-supabase-setup": "6.0.6",
+    "@redwoodjs/cli-storybook": "6.0.6",
     "@redwoodjs/core": "6.0.6"
   },
   "eslintConfig": {
