--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,12 @@
     "@redwoodjs/web": "6.1.1",
     "@sentry/react": "7.65.0",
     "@supabase/supabase-js": "2.33.1",
+    "@tiptap/extension-link": "^2.1.7",
+    "@tiptap/extension-placeholder": "^2.1.7",
+    "@tiptap/extension-underline": "^2.1.7",
+    "@tiptap/pm": "^2.1.7",
+    "@tiptap/react": "^2.1.7",
+    "@tiptap/starter-kit": "^2.1.7",
     "@vercel/analytics": "^1.0.2",
     "compressorjs": "^1.2.1",
     "date-fns": "^2.30.0",
