--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "@redwoodjs/web": "6.1.1",
     "@sentry/react": "7.65.0",
     "@supabase/supabase-js": "2.33.1",
+    "@tiptap/extension-character-count": "^2.1.8",
     "@tiptap/extension-link": "^2.1.7",
     "@tiptap/extension-placeholder": "^2.1.7",
     "@tiptap/extension-underline": "^2.1.7",
