--- a/web/package.json
+++ b/web/package.json
@@ -25,16 +25,16 @@
     "@sentry/react": "7.65.0",
     "@supabase/supabase-js": "2.33.1",
     "@tiptap/extension-character-count": "^2.1.8",
-    "@tiptap/extension-link": "^2.1.7",
-    "@tiptap/extension-placeholder": "^2.1.7",
-    "@tiptap/extension-underline": "^2.1.7",
-    "@tiptap/pm": "^2.1.7",
-    "@tiptap/react": "^2.1.7",
+    "@tiptap/extension-link": "2.1.8",
+    "@tiptap/extension-placeholder": "2.1.8",
+    "@tiptap/extension-underline": "2.1.8",
+    "@tiptap/pm": "2.1.8",
+    "@tiptap/react": "2.1.8",
     "@tiptap/starter-kit": "^2.1.8",
     "@vercel/analytics": "^1.0.2",
     "compressorjs": "^1.2.1",
     "date-fns": "^2.30.0",
-    "framer-motion": "10.16.3",
+    "framer-motion": "10.16.4",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
