--- a/web/package.json
+++ b/web/package.json
@@ -14,14 +14,14 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "2.1.1",
-    "@chakra-ui/react": "2.8.1",
+    "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
-    "@redwoodjs/auth": "6.3.1",
-    "@redwoodjs/auth-supabase-web": "6.3.1",
-    "@redwoodjs/forms": "6.3.1",
-    "@redwoodjs/router": "6.3.1",
-    "@redwoodjs/web": "6.3.1",
+    "@redwoodjs/auth": "6.6.4",
+    "@redwoodjs/auth-supabase-web": "6.6.4",
+    "@redwoodjs/forms": "6.6.4",
+    "@redwoodjs/router": "6.6.4",
+    "@redwoodjs/web": "6.6.4",
     "@sentry/react": "7.70.0",
     "@supabase/supabase-js": "2.33.2",
     "@tiptap/extension-character-count": "^2.1.8",
@@ -43,7 +43,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@redwoodjs/vite": "6.3.1",
+    "@redwoodjs/vite": "6.6.4",
     "@sentry/vite-plugin": "^2.7.1"
   }
 }
