--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,23 @@
-# DATABASE_URL=file:./dev.db
-# SUPABASE_URL=http://localhost:54321
-# SUPABASE_KEY=lksdjglsadkfjgslakgjasdlkgjasdlkgsdlfkjlskjgsdglkj
-# SUPABASE_JWT_SECRET=super-secret-jwt-token-with-at-least-32-characters-long
-# TEST_DATABASE_URL=file:./.redwood/test.db
-# PRISMA_HIDE_UPDATE_MESSAGE=true
-# LOG_LEVEL=trace
+# These environment variables will be used by default if you do not create any
+# yourself in .env. This file should be safe to check into your version control
+# system. Any custom values should go in .env and .env should *not* be checked
+# into version control.
+
+# schema.prisma defaults
+DATABASE_URL=postgresql://postgres:postgres@localhost:54322/postgres
+DATABASE_DIRECT_URL=postgresql://postgres:postgres@localhost:54322/postgres
+TEST_DATABASE_URL=postgresql://postgres:postgres@localhost:54322/postgres_test
+
+# supabase local defaults
+SUPABASE_URL=http://localhost:54321
+SUPABASE_KEY=
+SUPABASE_JWT_SECRET=
+
+# disables Prisma CLI update notifier
+PRISMA_HIDE_UPDATE_MESSAGE=true
+
+
+# Option to override the current environment's default api-side log level
+# See: https://redwoodjs.com/docs/logger for level options:
+# trace | info | debug | warn | error | silent
+LOG_LEVEL=trace
