--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -45,7 +45,7 @@ file_size_limit = "50MiB"
 # in emails.
 site_url = "http://localhost:8910"
 # A list of *exact* URLs that auth providers are permitted to redirect to post authentication.
-additional_redirect_urls = ["https://localhost:8910/me/reest-password"]
+additional_redirect_urls = ["https://localhost:8910/me/reset-password"]
 # How long tokens are valid for, in seconds. Defaults to 3600 (1 hour), maximum 604,800 seconds (one
 # week).
 jwt_expiry = 3600
@@ -65,8 +65,8 @@ enable_confirmations = true
 # `discord`, `facebook`, `github`, `gitlab`, `google`, `twitch`, `twitter`, `slack`, `spotify`.
 [auth.external.google]
 enabled = true
-client_id = "236970628493-j7lb8pjdc0hmbt7smeujearbrfj46l3u.apps.googleusercontent.com"
-secret = "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"
+client_id = ""
+secret = ""
 # Overrides the default auth redirectUrl.
 # redirect_uri = ""
 
