--- a/api/package.json
+++ b/api/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "@envelop/sentry": "6.0.1",
-    "@redwoodjs/api": "6.6.4",
-    "@redwoodjs/auth-supabase-api": "6.6.4",
-    "@redwoodjs/graphql-server": "6.6.4",
+    "@redwoodjs/api": "7.0.0",
+    "@redwoodjs/api-server": "7.0.0",
+    "@redwoodjs/auth-supabase-api": "7.0.0",
+    "@redwoodjs/graphql-server": "7.0.0",
     "@sendinblue/client": "^3.3.1",
     "@sentry/node": "7.70.0",
     "@sentry/profiling-node": "1.2.1",
