--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -64,7 +64,7 @@ enable_confirmations = true
 # Use an external OAuth provider. The full list of providers are: `apple`, `azure`, `bitbucket`,
 # `discord`, `facebook`, `github`, `gitlab`, `google`, `twitch`, `twitter`, `slack`, `spotify`.
 [auth.external.google]
-enabled = true
+enabled = false
 client_id = ""
 secret = ""
 # Overrides the default auth redirectUrl.
