--- a/web/package.json
+++ b/web/package.json
@@ -17,11 +17,11 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
-    "@redwoodjs/auth": "6.6.4",
-    "@redwoodjs/auth-supabase-web": "6.6.4",
-    "@redwoodjs/forms": "6.6.4",
-    "@redwoodjs/router": "6.6.4",
-    "@redwoodjs/web": "6.6.4",
+    "@redwoodjs/auth": "7.0.0",
+    "@redwoodjs/auth-supabase-web": "7.0.0",
+    "@redwoodjs/forms": "7.0.0",
+    "@redwoodjs/router": "7.0.0",
+    "@redwoodjs/web": "7.0.0",
     "@sentry/react": "7.70.0",
     "@supabase/supabase-js": "2.33.2",
     "@tiptap/extension-character-count": "^2.1.8",
@@ -31,11 +31,12 @@
     "@tiptap/pm": "2.1.8",
     "@tiptap/react": "2.1.8",
     "@tiptap/starter-kit": "^2.1.8",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "@vercel/analytics": "^1.0.2",
     "compressorjs": "^1.2.1",
     "date-fns": "^2.30.0",
     "framer-motion": "10.16.4",
-    "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
@@ -43,7 +44,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@redwoodjs/vite": "6.6.4",
+    "@redwoodjs/vite": "7.0.0",
     "@sentry/vite-plugin": "^2.7.1"
   }
 }
