--- a/web/package.json
+++ b/web/package.json
@@ -37,8 +37,8 @@
     "compressorjs": "^1.2.1",
     "date-fns": "^2.30.0",
     "framer-motion": "10.16.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "latest",
+    "react-dom": "latest",
     "react-icons": "^4.11.0",
     "react-wrap-balancer": "^1.1.0",
     "uuid": "^9.0.0"
