--- a/web/package.json
+++ b/web/package.json
@@ -23,7 +23,7 @@
     "@redwoodjs/router": "7.4.3",
     "@redwoodjs/web": "7.4.3",
     "@sentry/react": "7.70.0",
-    "@supabase/supabase-js": "latest",
+    "@supabase/supabase-js": "2.42.7",
     "@tiptap/extension-character-count": "^2.1.8",
     "@tiptap/extension-link": "2.1.8",
     "@tiptap/extension-placeholder": "2.1.8",
